[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/UI/Geodex/tab.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Geodex/entry_panel.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Geodex/BG.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/Geodex/Geodex.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Geodex/info.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Geodex/image.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Geodex/quit.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Geodex/full_heart.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Geodex/empty_heart.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Geodex/entry.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Geodex/greycat.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Geodex/entry_selected.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Geodex/entry_hovered.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/Geodex/tab_selected.png" type="Texture" id=14]
[ext_resource path="res://Scenes/UI/Geodex/Entry.gd" type="Script" id=15]
[ext_resource path="res://Assets/Fonts/Bitread.tres" type="DynamicFont" id=16]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Bitread-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
extra_spacing_bottom = -11
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/Bitread-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
extra_spacing_top = -2
extra_spacing_bottom = -10
font_data = SubResource( 5 )

[node name="Geodex" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Control"]
margin_right = 640.0
margin_bottom = 480.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImagePanel" type="TextureRect" parent="Control"]
margin_left = 6.0
margin_top = 47.0
margin_right = 341.0
margin_bottom = 280.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cat" type="TextureRect" parent="Control/ImagePanel"]
margin_left = -1.0
margin_right = 27.0
margin_bottom = 20.0
rect_scale = Vector2( 12, 12 )
texture = ExtResource( 11 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Panel" parent="Control/ImagePanel"]
margin_left = 163.0
margin_top = 114.5
margin_right = 163.0
margin_bottom = 114.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="TextureRect" parent="Control"]
margin_left = 6.0
margin_top = 302.0
margin_right = 341.0
margin_bottom = 474.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/InfoPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 335.0
margin_bottom = 140.0
custom_fonts/normal_font = SubResource( 6 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntryPanel" type="TextureRect" parent="Control"]
margin_left = 345.0
margin_top = 65.0
margin_right = 609.0
margin_bottom = 474.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Category" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabLeft" type="TextureButton" parent="Control/Category"]
margin_left = 345.0
margin_top = 6.0
margin_right = 477.0
margin_bottom = 62.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TabRight" type="TextureButton" parent="Control/Category"]
margin_left = 477.0
margin_top = 6.0
margin_right = 609.0
margin_bottom = 62.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 14 )
flip_h = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Category"]
margin_left = 346.0
margin_top = 6.0
margin_right = 609.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 3 )
text = "GeoCat"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Control"]
margin_left = 607.0
margin_top = 1.0
margin_right = 643.0
margin_bottom = 26.0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rarity" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="TextureButton" parent="Control/Rarity"]
margin_left = 11.0
margin_top = 9.0
margin_right = 41.0
margin_bottom = 35.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
button_mask = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="Control/Rarity"]
margin_left = 44.0
margin_top = 9.0
margin_right = 74.0
margin_bottom = 35.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
button_mask = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="Control/Rarity"]
margin_left = 77.0
margin_top = 9.0
margin_right = 107.0
margin_bottom = 35.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
button_mask = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="Control/Rarity"]
margin_left = 110.0
margin_top = 9.0
margin_right = 140.0
margin_bottom = 35.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
button_mask = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="Control/Rarity"]
margin_left = 144.0
margin_top = 9.0
margin_right = 174.0
margin_bottom = 35.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
button_mask = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="Control/Rarity"]
margin_left = 177.0
margin_top = 9.0
margin_right = 207.0
margin_bottom = 35.0
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
button_mask = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entries" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Entries"]
margin_left = 337.0
margin_top = 67.0
margin_right = 623.0
margin_bottom = 472.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Entries/ScrollContainer"]

[node name="EntryTemplate" type="TextureButton" parent="Control"]
visible = false
margin_left = 337.0
margin_top = 67.0
margin_right = 609.0
margin_bottom = 103.0
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/EntryTemplate"]
margin_left = 8.0
margin_right = 258.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "Ta Miu, Crown Prince Thutmose"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditionLabel" type="Label" parent="Control"]
margin_left = 12.0
margin_top = 445.0
margin_right = 92.0
margin_bottom = 470.0
custom_fonts/font = ExtResource( 16 )
text = "Edition: "
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentEditions" type="Label" parent="Control"]
margin_left = 90.0
margin_top = 445.0
margin_right = 332.0
margin_bottom = 470.0
custom_fonts/font = ExtResource( 16 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Category/TabLeft" to="." method="_on_TabLeft_pressed"]
[connection signal="pressed" from="Control/Category/TabRight" to="." method="_on_TabRight_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="mouse_entered" from="Control/EntryTemplate" to="Control/EntryTemplate" method="_on_EntryTemplate_mouse_entered"]
[connection signal="mouse_exited" from="Control/EntryTemplate" to="Control/EntryTemplate" method="_on_EntryTemplate_mouse_exited"]
[connection signal="pressed" from="Control/EntryTemplate" to="Control/EntryTemplate" method="_on_EntryTemplate_pressed"]
